cheat-sheet/network-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: curlimages/curl:latest
        command: ["sleep", "3600"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl2-deployment
  labels:
    app: curl2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl2
  template:
    metadata:
      labels:
        app: curl2
    spec:
      containers:
      - name: curl2
        image: curlimages/curl:latest
        command: ["sleep", "3600"]
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: curl
